# pysorting

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci-cd.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/pysorting/: __init__.py  bubble.py  bubblesort.py  insertion_sort.py  insertionsort.py  quicksort.py  shell_sort.py  shellsort.py  utils.py
tests/: bubblesort_test.py  conftest.py  insertionsort_test.py  quicksort_test.py  shellsort_test.py  test_insertion_sort.py  test_pysorting.py  test_shell_sort.py  test_utils.py
