[tool.poetry]
name = "pysorting"
version = "0.1.0"
description = "a package to aid user in implementing various sorting algorithms"
authors = ["Group 27"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
